# libgreflect

./: .gitignore  AUTHORS  Makefile.am  README  autogen.sh  configure.ac  libgreflect.pc.in
src/: Makefile.am  greflect-model.vala  greflect-proxy-internals-stripped.h  greflect-proxy-internals.c  greflect-proxy-internals.h  greflect-proxy.vala
test/: greflect-test.vala
